--- a/public/404.html
+++ b/public/404.html
@@ -2,9 +2,10 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; url=/#/" />
+    <meta http-equiv="refresh" content="" />
     <script>
-      window.location.replace('/#/');</script>
+      window.location.replace('')
+    </script>
   </head>
   <body></body>
 </html>
